gitops/infrastructure/kyverno/kyverno.yaml
---
# We need calico here to select control-plane
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: kyverno-allow-control-plane
  namespace: kyverno
spec:
  selector: all()
  order: 2000
  ingress:
    - action: Allow
      source:
        services:
          name: kubernetes
          namespace: default
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kyverno-allow-telemetry
  namespace: kyverno
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: telemetry
  policyTypes:
  - Ingress
